<resources>
    <string name="app_name">Shopping</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="register_name_hint">Name</string>
    <string name="register_phone_number_hint">Phone Number</string>
    <string name="btn_register_text">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_button_text">Log out</string>
    <string name="tv_product_price">100.000đ</string>
    <string name="tv_total_text">Total</string>
    <string name="sold_text">1000 sold</string>
    <string name="description_text">Description</string>
    <string name="comment_text">Comment</string>
    <string name="btn_select_product_text">SELECT PRODUCT</string>
</resources>